--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,16 @@
         app:layout_constraintTop_toBottomOf="@+id/shif" />
 
     <Button
+        android:id="@+id/button3"
+        android:layout_width="130dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="20dp"
+        android:text="Clear Text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="120dp"
         android:layout_height="50dp"
@@ -66,12 +76,14 @@
         android:id="@+id/textView"
         android:layout_width="182dp"
         android:layout_height="58dp"
-        android:layout_marginBottom="107dp"
+        android:layout_marginBottom="68dp"
         android:fontFamily="sans-serif-black"
         android:textAlignment="center"
+        android:textIsSelectable="true"
         android:textColor="#512DA8"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
